2014-09-14 arne

	* fix CShadowViewContainer drawing on Windows and use a gaussian blur approximation instead of a simple box blur
	* fix some more Direct2D and Quartz pixel drawing issues
	* fix iOS compilation issues
	* fix compilation issues with OS X 10.6 SDK

2014-09-07 arne

	* moved platform implementation of CVSTGUITimer into its own files
	
2014-09-05 arne

	* fix some Direct2D and Quartz pixel drawing issues
	* enable more compiler warnings and fix issues
	* add methods to CDrawContext to draw IPlatform strings for better performance
	* renamed CControlListener to VSTGUI::IControlListener and moved into its own header file
	* add forwarding header : vstguifwd.h and minimize includes

2014-08-23 arne

	* moved CScrollbar into its own file
	* Direct2D and Quartz nearly draw the same pixels now when drawing in integral mode

2014-08-20 arne

	* add CFrame::kDefaultKnobMode static variable to set the knob mode for the case when the VSTGUIEditorInterface does not provide one
	* first part to make the Direct2D and Quartz backend draw exactly the same

2014-08-14 arne

	* reversed DrawMode kIntegralMode style. Now the regular case is to draw pixel alligned.
	* add CRect::extend method

2014-08-10 arne

	* add two more ExchangeViewAnimation styles

2014-08-06 arne

	* add c++11 lambda alternative for Animation finished message

2014-08-03 arne

	* add new Control: CSegmentButton
	* changed Direct2D termination to not depend on __try __except (thanks to Andreas Persson)

2014-08-01 arne

	* add CGraphicsPath::pixelAlign to align the path to pixel boundaries

2014-07-24 arne

	* CTextButton and CGradientView now takes CGradient objects instead of colors and start offsets.

2014-07-09 arne

	* support drawing the best CBitmap representation according to the scale factor in the D2D backend
	* support setting a transform matrix on CFrame directly

2014-05-27 arne
